refactor: make username formatting explicit